--- a/registro.html
+++ b/registro.html
@@ -6,21 +6,21 @@
      </head>
      <body>
           <form action="../php/registro.php" method="post" onsubmit="return validateForm()">
-               <input type="text" name="user" id="usuario">
+               <input type="text" name="user" id="usuario" placeholder="Usuario">
                <br>
-               <input type="password" name="password" id = "pass1">
+               <input type="password" name="password" id = "pass1" placeholder="Contraseña">
                <br>
-               <input type="password" name="password2" id = "pass2">
+               <input type="password" name="password2" id = "pass2" placeholder="Repetir contraseña">
                <br>
-               <input type="text" name="email" id="mail1">
+               <input type="text" name="email" id="mail1" placeholder="Email">
                <br>
-               <input type="text" name="mail2" id="mail2">
+               <input type="text" name="mail2" id="mail2" placeholder="Repetir email">
                <br>
-               <input type="text" name="direccion">
+               <input type="text" name="direccion" placeholder="Direccion">
                <br>
-               <input type="text" name="nombre">
+               <input type="text" name="nombre" placeholder="Nombre">
                <br>
-               <input type="submit" name="submit" value="registrar">
+               <input type="submit" name="submit" value="Registrar">
           </form>
 
           <script>
